<resources>
    <string name="app_name">Feedback</string>
    <string name="suggest_feedback">意见反馈</string>
    <string name="account_problem">遇到问题</string>
    <string name="suggestion">使用建议</string>
    <string name="feedback_input_hint">请详细描述您遇到的问题</string>
    <string name="select_module">选择模块</string>
    <string name="phone_mail_hint">手机邮箱/邮箱</string>
    <string name="submit">提交</string>
    <string name="module_selection">选择模块</string>

</resources>
