<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainFeedbackActivity">
    <include layout="@layout/general_title_bar"/>

    <RadioGroup
        android:id="@+id/rg_radio"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_ger_title"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rb_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/account_problem"
            android:layout_marginEnd="50dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/rb_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_suggest_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="10"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:hint="@string/feedback_input_hint"
        android:gravity="top"
        android:padding="15dp"
        android:background="@drawable/round_corner_bg"
        android:layout_marginTop="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_radio"
        app:layout_constraintEnd_toEndOf="parent"/>
    <RelativeLayout
        android:id="@+id/rl_select_module"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_suggest_problem"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_module"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_select_module"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#9093A2"
            android:drawableEnd="@drawable/ic_chevron_right_black"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


        <EditText
        android:id="@+id/et_phone_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:lines="1"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:hint="@string/phone_mail_hint"
        android:gravity="top"
        android:padding="15dp"
        android:background="@drawable/round_corner_bg"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_select_module"
        app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"/>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:background="@drawable/round_corner_btn_bg"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>